# wash-cli

./: Cargo.toml  README.md  install.sh
src/: arguments.rs  commands.rs  helper.rs  logger.rs  main.rs
src/commands/: component_data.rs  dev.rs  managed.rs  simple.rs
